59 update user (#288)
* Add authorization check and user dto

* Add update user

* Fix api yaml validators

* Refactor tests and exceptions

* Add more test

* Add frontend implementation and connect to backend

* Code clearance

* Code clearance

* Code clearance

* Fix a typo

* Code refactoring after code review
