# am-ui/src/app/data/models/UserDto.ts
@@ -1,0 +1,7 @@
+export interface UserDto {
+  id?: string;
+  first_name: string;
+  last_name: string;
+  email: string;
+  phone_number: string;
+}
